[package]
name = "rurust"
version = "0.1.8"
authors = ["Dylan McKay <dylan.mckay@powershop.co.nz>"]
license = "MIT"

description = "High level Ruby VM bindings"

repository = "https://github.com/dylanmckay/rurust"
documentation = "https://crates.fyi/crates/rurust/0.1.1"

readme = "README.md"
keywords = ["ruby", "repl", "interpreter", "plugin", "vm"]

[dependencies]
libc = ">= 0.2.11"
mri-sys = "0.2"

[lib]
name = "rurust"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "tools/repl.rs"
