[package]
name = "rurust"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
license = "MIT"
edition = "2018"

description = "High level Ruby VM bindings"

repository = "https://github.com/dylanmckay/rurust"
documentation = "https://docs.rs/rurust"

readme = "README.md"
keywords = ["ruby", "repl", "interpreter", "plugin", "vm"]

[dependencies]
libc = ">= 0.2.86"
mri-sys = "0.2"
lazy_static = "1.4"

[lib]
name = "rurust"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "tools/repl.rs"
